feat(api): add beer type and unfiltered attribute support
Add support for beer as a new drink type with corresponding light/dark color options. Introduce an unfiltered boolean field to allow filtering drinks by this attribute in the API.
